--- a/app/views/rafson/input.html.erb
+++ b/app/views/rafson/input.html.erb
@@ -4,3 +4,6 @@
   <%= text_field_tag :num %>
   <%= submit_tag("Result") %>
 <% end %>
+<br/>
+<%= link_to 'Log out', '/signout' %>&nbsp;&nbsp;&nbsp;
+<%= link_to 'List of users', '/users' %>
