--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<h1>News</h1>
+<%= stylesheet_link_tag "news"%>
+<header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
+  <nav class="my-2 my-md-0 me-md-3">
+    <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
+    <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to 'My Profile', main_profile_path%></span>
+  </nav>
+  <a class="btn btn-outline-primary" href="/signout">Log out</a>
+</header>
+<div class="container">
+  <h1>News</h1>
+  <% @post.each do |post| %>
+    <div class="alert alert-light">
+      <% author_name = User.find_by_id(post.author_id).name %>
+      <h3><%= post.title %></h3>
+      <h4> <%= author_name%></h4>
+      <p> <%= post.body %></p>
+      <%= link_to 'Читать далее', post_path(post), :class =>
+          'btn btn-outline-primary'%>
+    </div>
+  <% end %>
+</div>
 
-<br/>
-<%= link_to 'Log out', '/signout' %>&nbsp;&nbsp;&nbsp;
-</body>
-</html>
