--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,12 @@
 <%= stylesheet_link_tag "new"%>
 <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
     <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
     <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
     <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', main_profile_path%></span>
+    <span class="p-2 text-dark" ><%= link_to 'My Profile', @_current_user%></span>
   </nav>
   <a class="btn btn-outline-primary" href="/signout">Log out</a>
 </header>
@@ -28,7 +29,7 @@
       <%= f.text_area (:body), ({:class => 'form-control'}) %>
     </p>
     <p>
-      <%= f.submit ({:class => 'btn btn-success'}) %>
+      <%= f.submit 'Create post', ({:class => 'btn btn-success'}) %>
     </p>
   <% end %>
 </div>
