--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,24 @@
 <%= stylesheet_link_tag "new"%>
 <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
     <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
     <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
     <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', main_profile_path%></span>
+    <span class="p-2 text-dark" ><%= link_to 'My Profile', @_current_user%></span>
   </nav>
   <a class="btn btn-outline-primary" href="/signout">Log out</a>
 </header>
 <div class="container">
-  <h1><%= @post.title %></h1>
-  <h2><%= User.find_by_id(@post.author_id).name %></h2>
+  <h1><%=User.find_by_id(@post.author_id).name %></h1>
+  <h2><%= @post.title %></h2>
   <p><%= @post.body %></p>
+  <a class="btn btn-outline-primary" href="#" id="backBtn">Back</a>
 </div>
+
+<script>
+    document.getElementById('backBtn').onclick = function () {
+        history.back();
+    }
+</script>
