--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,15 +3,15 @@
   <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
-    <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', user_path(@_current_user)%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.news'), posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.add'), new_post_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_posts'), posts_my_posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_profile'), @_current_user%></span>
   </nav>
-  <a class="btn btn-outline-primary" href="/signout">Log out</a>
+  <a class="btn btn-outline-primary" id="pageLogBtn" href="/signout"><%= label_tag t('pages.logout') %></a>
 </header>
 <div class="container">
-  <h1>News</h1>
+  <h1><%= label_tag t('pages.news') %></h1>
   <% @post.each do |post| %>
     <% if !User.find_by_id(post.author_id).nil? %>
       <div class="alert alert-light">
@@ -19,7 +19,7 @@
         <h3><%= link_to author_name, User.find_by_id(post.author_id) %></h3>
         <h4><%= post.title %></h4>
         <p> <%= post.body %></p>
-        <%= link_to 'Read more', post_path(post), :class =>
+        <%= link_to t('my_posts.read_more'), post_path(post), :class =>
             'btn btn-outline-primary'%>
       </div>
     <% end %>
