--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,6 @@
 footer {
     width: 100%;
-    text-align: center;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-}
-footer div {
-    width: 100%;
+    height: 3rem;
 }
 #title {
     margin-right: auto;
@@ -25,4 +19,11 @@ img {
     height: 70%;
     margin-right: 2em;
 }
+#pageLogBtn {
+    width: 6em;
+}
+label {
+    margin-bottom: 0;
+}
+
 
