--- a/app/views/posts/my_posts.html.erb
+++ b/app/views/posts/my_posts.html.erb
@@ -3,12 +3,12 @@
   <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
-    <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', @_current_user%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.news'), posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.add'), new_post_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_posts'), posts_my_posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_profile'), @_current_user%></span>
   </nav>
-  <a class="btn btn-outline-primary" href="/signout">Log out</a>
+  <a class="btn btn-outline-primary" id="pageLogBtn" href="/signout"><%= label_tag t('pages.logout') %></a>
 </header>
 <div class="container">
   <% @my_posts.each do |post| %>
@@ -16,11 +16,11 @@
      <div class="alert alert-light">
         <h4><%= post.title %></h4>
         <p> <%= post.body %></p>
-        <%= link_to 'Read more', post_path(post), :class =>
+        <%= link_to t('my_posts.read_more'), post_path(post), :class =>
             'btn btn-info'%>
-        <%= link_to 'Edit', edit_post_path(post), :class =>
+        <%= link_to t('my_posts.edit'), edit_post_path(post), :class =>
            'btn btn-warning'%>
-        <%= link_to 'Delete', post_path(post), :method => :delete, data: {confirm: 'Подтвердите удаление статьи'}, :class =>
+        <%= link_to t('my_posts.delte'), post_path(post), :method => :delete, data: {confirm: 'Подтвердите удаление статьи'}, :class =>
            'btn btn-danger'%>
      </div>
     <% end %>
