--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,15 +3,15 @@
   <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
-    <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', @_current_user%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.news'), posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.add'), new_post_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_posts'), posts_my_posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_profile'), @_current_user%></span>
   </nav>
-  <a class="btn btn-outline-primary" href="/signout">Log out</a>
+  <a class="btn btn-outline-primary" id="pageLogBtn" href="/signout"><%= label_tag t('pages.logout') %></a>
 </header>
 <div class="container">
-  <h2>New post</h2>
+  <h2><%= label_tag t('pages.add') %></h2>
   <%= form_for :post, url: posts_path do |f| %>
     <% if @post.errors.any? %>
       <% @post.errors.full_messages.each do |msg| %>
@@ -21,15 +21,15 @@
       <% end %>
     <% end %>
     <p>
-      <span>Title</span>
+      <%= f.label :title %>
       <%= f.text_field (:title) , ({:class => 'form-control'}) %>
     </p>
     <p>
-      <span>Body</span>
+      <%= f.label :body %></br>
       <%= f.text_area (:body), ({:class => 'form-control'}) %>
     </p>
     <p>
-      <%= f.submit 'Create post', ({:class => 'btn btn-success'}) %>
+      <%= f.submit t('activerecord.attributes.post.create'), ({:class => 'btn btn-success'}) %>
     </p>
   <% end %>
 </div>
