--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,52 +3,52 @@
   <img src="http://spbtpp.ru/wp-content/uploads/2018/12/Логотип-БП-Восстания-6.jpg">
   <p class="h5 my-0 me-md-auto fw-normal" id="title"><b>BestPosts</b></p>
   <nav class="my-2 my-md-0 me-md-3">
-    <span class="p-2 text-dark" ><%= link_to 'News', posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'Add new post', new_post_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Posts', posts_my_posts_path%></span>
-    <span class="p-2 text-dark" ><%= link_to 'My Profile', @_current_user%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.news'), posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.add'), new_post_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_posts'), posts_my_posts_path%></span>
+    <span class="p-2 text-dark" ><%= link_to t('pages.my_profile'), @_current_user%></span>
   </nav>
-  <a class="btn btn-outline-primary" href="/signout">Log out</a>
+  <a class="btn btn-outline-primary" id="pageLogBtn" href="/signout"><%= label_tag t('pages.logout') %></a>
 </header>
 <div class="container">
   <% if @user.id == @profile_id %>
-    <h1>Мой профиль</h1>
+    <h1><%= label_tag t('pages.my_profile') %></h1>
   <% else %>
-    <h1>Профиль</h1>
+    <h1><%= label_tag t('profile.profile') %></h1>
   <% end %>
   <div class="profile_el">
-    <p class="little">Имя</p>
+    <p class="little"><%= label_tag t('profile.name') %></p>
     <span><%= @user.name %></span>
     <hr>
   </div>
 
   <div class="profile_el">
-    <p class="little">Почта</p>
+    <p class="little"><%= label_tag t('profile.email') %></p>
     <span><%= @user.email %></span>
     <hr>
   </div>
 
   <div class="profile_el">
-    <p class="little">Возраст</p>
+    <p class="little"><%= label_tag t('profile.age') %></p>
     <span><%= @user.age %></span>
     <hr>
   </div>
 
   <div class="profile_el">
-    <p class="little">Город</p>
+    <p class="little"><%= label_tag t('profile.town') %></p>
     <span><%= @user.town %></span>
     <hr>
   </div>
 
   <div class="profile_el">
-    <p class="little">Группа</p>
+    <p class="little"><%= label_tag t('profile.group') %></p>
     <span><%= @user.group %></span>
     <hr>
   </div>
   <% if @user.id == @profile_id %>
-    <%= link_to 'Редактировать', edit_user_path(@user), :class =>
+    <%= link_to t('my_posts.edit'), edit_user_path(@user), :class =>
         'btn btn-warning'%>
-    <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Вы действительно хотите удалить профиль?' },
+    <%= link_to t('my_posts.delte'), @user, method: :delete, data: { confirm: 'Вы действительно хотите удалить профиль?' },
         :class => 'btn btn-danger'%>
     <% end %>
 </div>
